# openclaw_sentrix

./: .gitignore  AGENTS.md
openclaw_sentrix/: README.md  package-lock.json  package.json  supabase-waitlist.sql
openclaw_sentrix/app/: globals.css  layout.tsx  page.tsx
openclaw_sentrix/app/api/waitlist/: route.ts
openclaw_sentrix/app/claw/: page.tsx
openclaw_sentrix/app/components/: AnimatedSprite.tsx  AppNav.tsx  BackersMarquee.tsx  CaptureSequence.tsx  Footer.tsx  GTCBanner.tsx  Hero.tsx  InstallationGuide.tsx  Problem.tsx  SmoothScroll.tsx  SnapController.tsx  Solution.tsx  Tech.tsx  WaitlistForm.tsx
openclaw_sentrix/app/components/AgentPolice/: InvestigationDetail.tsx  InvestigationRegistry.tsx  SpriteWorld.tsx  index.tsx  types.ts
openclaw_sentrix/app/components/AgentPolice/config/: roomLayout.ts  spriteConfig.ts
openclaw_sentrix/app/components/AgentPolice/entities/: AgentSprite.tsx  BaseCharacter.tsx  InvestigatorSprite.tsx  PatrolSprite.tsx
openclaw_sentrix/app/components/AgentPolice/hooks/: spriteLoader.ts  useAgentMovement.ts  useInvestigatorMovement.ts  useMovementDirection.ts  usePatrolFlagNotifications.ts  usePatrolResponseSequence.ts  usePatrolTargetMovement.ts  useQuarantineRoaming.ts  (+2 more)
openclaw_sentrix/lib/: chatHistory.ts  investigationReports.ts
sentrix/: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
sentrix/agent_logs/: .sentrix_sandbox_id  .sentrix_sync_state  20260310T014033.json  20260310T185751.json  20260310T202647.json  20260310T205515.json  20260310T211524.json  20260310T214230.json  patrol_flags.jsonl  patrol_state.db  police.db
sentrix/agent_logs/reports/: case_53c66f0c-b738-4818-8b13-35a8c83bac67_20260310T205843Z.json  case_78dcc266-d577-46c8-a3fb-1422cdca8230_20260310T214526Z.json  case_7ca71d8a-5306-443f-aff1-fc1c2e217692_20260310T211611Z.json  case_b6f72cc0-7dc5-49de-a1c6-613404847485_20260310T202215Z.json  case_ff85fbff-b4db-4b08-aa6b-43b498b0f0fe_20260310T214317Z.json
sentrix/sandbox/: Dockerfile  collect_logs.py  openclaw.json
sentrix/sentrix/: __init__.py  bridge.py  cli.py  config.py  log_sync.py  sandbox.py  wizard.py
sentrix/sentrix/patrol/: __init__.py  blackboard.py  config.py  graph.py  log_reader.py  models.py  orchestrator.py  prompts.py  state.py  sweep.py
sentrix/sentrix/patrol/agents/: __init__.py  log_patrol.py
sentrix/sentrix/police/: __init__.py  config.py  db.py  escalation.py  graph.py  models.py  prompts.py  run.py
sentrix/sentrix/police/agents/: __init__.py  base.py  investigator.py
sentrix/sentrix/sandbox/: Dockerfile  entrypoint.sh  init_auth.py  openclaw.json
sentrix/tests/: test_init_auth.py
(+4 files in other folders)
