[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-sentrix"
version = "0.1.8"
description = "Sandboxed OpenClaw with agnetic police management"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Desmond Zee" },
]
keywords = [
    "ai-agents",
    "openclaw",
    "ai-safety",
    "llm",
    "sandbox",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "opensandbox",
    "opensandbox-server",
    "click",
    "rich",
    "httpx",
    "questionary",
    "python-dotenv",
    "langgraph",
    "langchain-core",
    "langchain-openai",
    "langchain-anthropic",
    "pydantic>=2",
    "websockets>=10",
    "cryptography",
]

[project.urls]
Homepage = "https://openclaw-sentrix.vercel.app"
Repository = "https://github.com/openclaw/openclaw"
Issues = "https://github.com/openclaw/openclaw/issues"

[project.scripts]
sentrix = "sentrix.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sentrix"]

[tool.hatch.build.targets.sdist]
include = [
    "sentrix/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
